hello-deploy-tp2.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kubernetes.io/change-cause: v0.8.27
  labels:
    app: hello
  name: hello
spec:
  replicas: 3
  selector:
    matchLabels:
      app: hello
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 50%
      maxUnavailable: 5
  template:
    metadata:
      labels:
        app: hello
    spec:
      containers:
      - image: bob2606/hello-http:0.8.27
        name: hello-http
        ports:
          - containerPort: 80
            name: hello
        readinessProbe:
          httpGet:
            path: /healthz
            port: 80
          periodSeconds: 5
          failureThreshold: 3
        livenessProbe:
          httpGet:
            path: /healthz
            port: 80
          periodSeconds: 15
          failureThreshold: 2
        volumeMounts:
          - name: data
            mountPath: /var/lib/hello-http
            subPath: hello

      volumes:
        - name: data
          nfs:
            server: 192.168.56.250
            path: /
