hello-pod.yml
apiVersion: v1
kind: Pod
metadata:
  labels:
    run: hellobusy
    env: dev
  name: hellobusy
spec:
  containers:
  - image: bob2606/hello-http:0.8.27
    name: hello
  - image: busybox:1.28
    name: busy
    command:
      - tail
      - -f
      - /dev/null
---
apiVersion: v1
kind: Pod
metadata:
  labels:
    run: hellobusy
    env: dev
  name: hellobusy2
spec:
  containers:
  - image: bob2606/hello-http:0.8.27
    name: hello
  - image: busybox:1.28
    name: busy
    command:
      - tail
      - -f
      - /dev/null
