hello-sts.yml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  annotations:
    kubernetes.io/change-cause: v0.8.27
  labels:
    app: hello
  name: hello
spec:
  replicas: 3
  serviceName: hello
  selector:
    matchLabels:
      app: hello
  template:
    metadata:
      labels:
        app: hello
    spec:
      containers:
      - image: bob2606/hello-http:0.8.27
        name: hello-http
        ports:
          - containerPort: 80
            name: hello
        readinessProbe:
          httpGet:
            path: /healthz
            port: 80
          periodSeconds: 5
          failureThreshold: 3
        livenessProbe:
          httpGet:
            path: /healthz
            port: 80
          periodSeconds: 15
          failureThreshold: 2
        volumeMounts:
          - name: status
            mountPath: /var/lib/hello-http

      volumes:
        - name: status
          emptyDir:
            medium: Memory
