web-deploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: web
  name: web
spec:
  replicas: 2
  selector:
    matchLabels:
      app: web
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: web
    spec:
      containers:
      - image: nginx:1.26
        name: nginx
        readinessProbe:
          httpGet:
            path: /index.html
            port: 80
          periodSeconds: 2
          failureThreshold: 2
        livenessProbe:
          httpGet:
            path: /index.html
            port: 80
          periodSeconds: 5
          failureThreshold: 2
        volumeMounts:
          - name: html
            mountPath: /usr/share/nginx/html
          - name: nginx-config
            mountPath: /etc/nginx/conf.d/
      - image: php:8.2-fpm
        name: php
        volumeMounts:
          - name: html
            mountPath: /var/www/html

      volumes:
        - name: html
          hostPath:
            path: /data
            type: Directory
        - name: nginx-config
          configMap:
            name: nginx
