hello-svc-headless.yml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: hello
  name: hello
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: hello
  selector:
    app: hello
  clusterIP: None
