helloweb-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: helloweb
spec:
  ingressClassName: nginx
  rules:
  - host: hello.stage
    http:
      paths:
      - backend:
          service:
            name: hello
            port:
              number: 80
        path: /
        pathType: Prefix
  - host: web.stage
    http:
      paths:
      - backend:
          service:
            name: web
            port:
              number: 80
        path: /
        pathType: Prefix
