hello-netpol.yml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: hello-1
spec:
  podSelector:
    matchLabels:
      app: hello
  ingress:
    - from:
        - podSelector:
            matchExpressions:
              - key: clienthello
                operator: In
                values: 
                  - oui
                  - sionveut
        - namespaceSelector:
            matchLabels:
              clienthello: oui
          podSelector:
            matchLabels:
              clienthello: oui
